slider laterali completi

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="immagini">
       <img :src="immagine[contatore]" alt="">
       </div>
-      <div class="destra"><i class="fas fa-chevron-right"></i></div>
+      <div class="destra"><i @click="successiva"class="fas fa-chevron-right"></i></div>
     </div>
   </div>
 <script type="text/javascript" src="vue/script.js">
